chainsight-cdk/src/convert/snapshots/chainsight_cdk__convert__candid__tests__compile__multiple_arguments.snap
---
source: chainsight-cdk/src/convert/candid.rs
expression: compiled
---
#![allow(dead_code, unused_imports)]
use candid::{self, CandidType, Deserialize, Principal, Encode, Decode};
#[derive(Clone, Debug, candid :: CandidType, candid :: Deserialize, serde :: Serialize, chainsight_cdk_macros :: StableMemoryStorable)]
pub struct RequestArgsType (pub u64,pub u64,pub u64,);
pub type ResponseType = Vec<(u64,Vec<f64>,)>;
