chainsight-cdk/src/convert/snapshots/chainsight_cdk__convert__candid__tests__compile__normal.snap
---
source: chainsight-cdk/src/convert/candid.rs
expression: compiled
---
#![allow(dead_code, unused_imports)]
use candid::{self, CandidType, Deserialize, Principal, Encode, Decode};
use ic_cdk::export::candid::{self, CandidType, Deserialize};
use ic_cdk::api::call::CallResult;
pub type RequestArgsType = u64;
pub type ResponseType = String;
