chainsight-cdk/src/convert/snapshots/chainsight_cdk__convert__candid__tests__compile__normal_int.snap
---
source: chainsight-cdk/src/convert/candid.rs
expression: compiled
---
#![allow(dead_code, unused_imports)]
use candid::{self, CandidType, Deserialize, Principal, Encode, Decode};
pub type RequestArgsType = i32;
pub type ResponseType = i128;
