chainsight-cdk/src/convert/snapshots/chainsight_cdk__convert__candid__tests__compile__normal_nat.snap
---
source: chainsight-cdk/src/convert/candid.rs
expression: compiled
---
#![allow(dead_code, unused_imports)]
use candid::{self, CandidType, Deserialize, Principal, Encode, Decode};
pub type RequestArgsType = u32;
pub type ResponseType = u128;
