chainsight-cdk/src/convert/snapshots/chainsight_cdk__convert__candid__tests__compile__record.snap
---
source: chainsight-cdk/src/convert/candid.rs
expression: compiled
---
use ic_cdk::export::candid::{self, CandidType, Deserialize};
use ic_cdk::api::call::CallResult;
type RequestArgsType = u64;
#[derive(Clone, Debug, candid :: CandidType, candid :: Deserialize, serde :: Serialize, chainsight_cdk_macros :: StableMemoryStorable)]
struct ResponseType { value: String, timestamp: u64 }
